package com.twilio.verify.models

/*
 * Copyright (c) 2020, Twilio Inc.
 */

interface VerifyFactorInput {
  val sid: String
}